--- a/app/views/ships/ships.html
+++ b/app/views/ships/ships.html
@@ -1,4 +1,6 @@
 <h1>All our amazing ships</h1>
     <div ng-repeat="ship in ships" >
-        {{ship}}
+        <a ui-sref='ship(ship)' ><h3>{{ship.name}}</h3></a>
+        {{ship.model}} -- {{ship.cost_in_credits | currency}}
+        
     </div>
